2003-12-19 Jim Garlick <garlick@llnl.gov>

    * Makefile, powerman.spec, man/powerman.1: remove 'on' and 'off' sym links.

    * etc/README: added statement description.

    * powerman.spec: post scriptlet stops and restarts powerman, if it was
    running.

2003-12-17 Jim Garlick <garlick@llnl.gov>

    * src/device.c: remove _verify_plugassign (hold over from when we had
    setplugname commands in scripts).

    * src/device_pipe.c: assert no string overflow from forkpty().

2003-12-08 Jim Garlick <garlick@llnl.gov>

    * etc/vpc.dev: implement status_all, on_all, off_all, and cycle_all
    for efficiency.

    * src/device.c, src/powermand.c, src/wrappers.c: introduce poll debugging
    code and fix bug where poll loop would spin when poll returned errors
    on devices.

    * src/device.c: rewrite dev_post_poll() for clarity.

    * src/device_pipe.c, Makefile: use openpty() from -lutil instead of local
    pty_open.  This gets pty allocation right once and for all.

    * src/pty.[ch]: removed.

    * src/hash.[ch]: new from lsd-tools (courtesy Chris Dunlap)

    * src/device.[ch], src/client.c: changed ArgList to use hash_t instead of
    List since gprof showed list searching was the bottleneck in big configs.
    Caveat: unsorted output (-x, temperature) is no longer returned in config 
    file order. 

    * : tag powerman-1-0-19

2003-12-04 Jim Garlick <garlick@llnl.gov>

    * etc/cyclades-pm8.dev: fixed status script to not fail intermittently
    depending on breakdown of partial reads.

    * etc/cyclades-pm8.dev: device has a non-configurable inactivity
    timeout so log on and off for each command.

    * etc/baytech-rpc28-nc.dev: device has a non-configurable inactivity
    timeout so repeat login sequence before each command (it works whether
    logged in or not).
    
    * powerman.spec: add %dir entries for directories that may be inadvertantly
    created with too restrictive permissions like /usr/man/man7.
