@@ -79,8 +79,7 @@ void pipe_destroy(void *data)
     Free(pd);
 }
 
-/* Start the coprocess using forkpty(3).
- */
+/* Start the coprocess using forkpty(3).  */
 bool pipe_connect(Device * dev)
 {
     int fd;
